refactor: Улучшить стиль написания кода согласно Конституции